feat: client | spec 5.9.0 (#91)
